[gd_scene load_steps=5 format=3 uid="uid://drul23dt1xxyn"]

[ext_resource type="Script" uid="uid://l4wsgwn154gi" path="res://Main.gd" id="1_cm0pq"]
[ext_resource type="Script" uid="uid://c2u5okdfn6leg" path="res://ElektricnoKoloSimulacija/Program/camera_3d_controller.gd" id="2_fos0i"]
[ext_resource type="PackedScene" uid="uid://damdc5118gnbk" path="res://ElektricnoKoloSimulacija/UI/ComponentPanel.tscn" id="3_3dxm6"]
[ext_resource type="Script" uid="uid://dpt7310jvgarb" path="res://ElektricnoKoloSimulacija/Program/ViewModePanel.gd" id="4_lgr22"]

[node name="Main" type="Node2D"]
script = ExtResource("1_cm0pq")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visible = false
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="World3D" type="Node3D" parent="SubViewportContainer/SubViewport" groups=["3d_world"]]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/World3D"]

[node name="Camera3DController" type="Node3D" parent="SubViewportContainer/SubViewport/World3D"]
script = ExtResource("2_fos0i")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/World3D/Camera3DController"]

[node name="Ground" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/World3D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComponentPanel" parent="CanvasLayer" instance=ExtResource("3_3dxm6")]

[node name="ViewModePanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -390.0
offset_bottom = 60.0
grow_horizontal = 0
script = ExtResource("4_lgr22")
